RESOLVED FIXED200007
Prewarmed font does not find any matches
https://bugs.webkit.org/show_bug.cgi?id=200007
Summary Prewarmed font does not find any matches
Per Arne Vollan
Reported 2019-07-22 11:38:37 PDT
Prewarming the font name 'SF Pro Text' does not find any matches. The font name ".SF NS Text/Display" should be used instead.
Attachments
Patch (1.66 KB, patch)
2019-07-22 11:49 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2019-07-22 11:49:16 PDT
Brent Fulgham
Comment 2 2019-07-22 12:01:28 PDT
Comment on attachment 374617 [details] Patch r=me
Per Arne Vollan
Comment 3 2019-07-22 13:14:23 PDT
Comment on attachment 374617 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4 2019-07-22 13:24:11 PDT
Comment on attachment 374617 [details] Patch Clearing flags on attachment: 374617 Committed r247699: <https://trac.webkit.org/changeset/247699>
WebKit Commit Bot
Comment 5 2019-07-22 13:24:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-07-22 13:30:18 PDT
Note You need to log in before you can comment on or make changes to this bug.