Prewarmed font does not find any matches https://bugs.webkit.org/show_bug.cgi?id=200007

Reviewed by Brent Fulgham.

Prewarming the font name 'SF Pro Text' does not find any matches. The font name ".SF NS Text/Display"
should be used instead. Also add 'Lucida Grande' to the list of prewarmed font, since it is used as
fallback font in many cases.

No new tests, covered by existing tests.

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::fontFamiliesForPrewarming):


Canonical link: https://commits.webkit.org/213861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247699 268f45cc-cd09-0410-ab3c-d52691b4dbfc